# PsyLens

./: .env.example  .gitattributes  .gitignore  04_validated_insights.jsonl  05_action_matrix.json  DATA_DICTIONARY.md  METHODOLOGY.md  PROJECT_BRIEF.md  README.md  REPRODUCIBILITY.md  RIGHTS_AND_USAGE.md  ai_curate_feedback.py  final_evidence_table.csv  index.md  input_feedback_phase2_multiplatform_clean.csv  preclean_feedback_registry.py  pyproject.toml  requirements.txt  run_pipeline.py  公开版文件清单.txt
config/: public_copy_rules.yaml
demo/: README.md
docs/: CONTENT_STYLE_GUIDE.md  REVAMP_AUDIT_SCOPE.md  index.html  index.md  style.css
evaluation/: failure_taxonomy.yaml  metrics.yaml  thresholds.yaml
pipeline/: README.md  requirements-legacy.txt  requirements-optional.txt
scripts_public/: crawl_bili_selected_auto.py  crawl_tieba_selected.py  merge_phase2_inputs.py  preclean_feedback_registry.py
tests/: test_agent_consensus.py  test_agent_review_resume.py  test_agent_review_schema.py  test_calibration_determinism.py  test_calibration_sampling.py  test_ci_guards.py  test_evaluator.py  test_final_publication.py  test_pages_workflow.py  test_pipeline_templates.py  test_private_artifacts.py  test_public_copy_linter.py  test_public_data_audit.py  test_public_dataset.py  test_public_release.py  test_showcase_builder.py  test_site_static.py
tools/: audit_public_data.py  build_draft_actions.py  build_draft_insights.py  build_project_brief_docx.py  build_provisional_evidence.py  build_public_dataset.py  build_review_infra.py  build_showcase_data.py  build_v2_dataset.py  (+5 more)
(+127 files in other folders)
