[project]
name = "psylens"
version = "0.3.0"
description = "Community feedback analysis, psychology-informed coding, and reliability evaluation"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
docs = ["python-docx>=1.1"]
dev = ["pytest>=7.0", "ruff>=0.4", "python-docx>=1.1"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests", "demo/tests"]
